--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.3.4",
     "com.unity.package-manager-ui": "2.1.2",
     "com.unity.postprocessing": "2.1.6",
     "com.unity.probuilder": "4.0.4",
