--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,10 @@ ExportedObj/
 sysinfo.txt
 
 # FMOD
-/Assets/FMODStudioCache.asset
-/Assets/FMODStudioCache.asset.meta
+#/Assets/FMODStudioCache.asset
+#/Assets/FMODStudioCache.asset.meta
+Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
 fmod.log
 fmod_editor.log
 
