--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,8 @@ sysinfo.txt
 # FMOD
 #/Assets/FMODStudioCache.asset
 #/Assets/FMODStudioCache.asset.meta
-Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
-Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
+#Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+#Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
 fmod.log
 fmod_editor.log
 
