--- a/.gitignore
+++ b/.gitignore
@@ -32,10 +32,12 @@ ExportedObj/
 sysinfo.txt
 
 # FMOD
-#/Assets/FMODStudioCache.asset
-#/Assets/FMODStudioCache.asset.meta
-#Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
-#Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
+**/FMODStudioCache.asset
+**/FMODStudioCache.asset.meta
+**/StreamingAssets/Users/
+*/Assets/StreamingAssets/**/*.bank
+*/Assets/StreamingAssets/**/*.bank.meta
+**/.unsaved/
 fmod.log
 fmod_editor.log
 
