--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 #FMOD
 *.bank filter=lfs diff=lfs merge=lfs -text
+/Assets/StreamingAssets/*.bank filter=lfs diff=lfs merge=lfs -text
+/Assets/Plugins/fmodstudio.bundle/** filter=lfs diff=lfs merge=lfs -text
+/Assets/Plugins/fmodstudioL.bundle/** filter=lfs diff=lfs merge=lfs -text
+/Source/** filter=lfs diff=lfs merge=lfs -text
