--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,8 @@ sysinfo.txt
 **/FMODStudioCache.asset
 **/FMODStudioCache.asset.meta
 **/StreamingAssets/Users/
-*/Assets/StreamingAssets/**/*.bank
-*/Assets/StreamingAssets/**/*.bank.meta
+*/Assets/StreamingAssets/*.bank
+*/Assets/StreamingAssets/*.bank.meta
 **/.unsaved/
 fmod.log
 fmod_editor.log
