--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.postprocessing": "2.3.0",
     "com.unity.probuilder": "4.2.3",
     "com.unity.render-pipelines.lightweight": "7.3.1",
+    "com.unity.settings-manager": "1.0.3",
     "com.unity.shadergraph": "7.3.1",
     "com.unity.test-framework": "1.1.14",
     "com.unity.textmeshpro": "2.0.1",
