--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.burst": "1.3.9",
     "com.unity.cinemachine": "2.5.0",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.3",
     "com.unity.ide.vscode": "1.2.2",
+    "com.unity.mathematics": "1.2.1",
     "com.unity.postprocessing": "2.3.0",
     "com.unity.probuilder": "4.2.3",
     "com.unity.render-pipelines.lightweight": "8.2.0",
