--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,13 @@ ExportedObj/
 sysinfo.txt
 
 # FMOD
+/Assets/Plugins/FMOD/.cache
+/Assets/Plugins/FMOD/.user
+/Assets/Plugins/FMOD/.unsaved
+/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
+/Assets/StreamingAssets//*.bank
+/Assets/StreamingAssets//*.bank.meta
 **/FMODStudioCache.asset
 **/FMODStudioCache.asset.meta
 */Assets/StreamingAssets/*.bank
