--- a/Assets/_Game/DanmakU/Runtime/DanmakU.asmdef
+++ b/Assets/_Game/DanmakU/Runtime/DanmakU.asmdef
@@ -1,8 +1,16 @@
 {
     "name": "DanmakU",
-    "references": [],
-    "optionalUnityReferences": [],
+    "rootNamespace": "",
+    "references": [
+        "GUID:d8b63aba1907145bea998dd612889d6b"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "allowUnsafeCode": true
+    "allowUnsafeCode": true,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
