--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,9 +10,10 @@
   ],
   "dependencies": {
     "com.arongranberg.astar": "4.3.49",
+    "com.supremepanda.gpu_instance_manager": "https://github.com/supremepanda/GPUInstanceManager.git#upm",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.burst": "1.6.5",
+    "com.unity.burst": "1.8.3",
     "com.unity.cinemachine": "2.8.6",
     "com.unity.collections": "1.2.3",
     "com.unity.ide.rider": "3.0.14",
